# bdl-2025-hashes-b-nus-jayrmotta

./: .gitignore
implementation/: Cargo.toml
solutions/: exercise01.txt  exercise02.txt  exercise03.txt  exercise04.txt  exercise05.txt  exercise06.txt  find_collision.sh  find_input.sh
